--- a/css/styles.css
+++ b/css/styles.css
@@ -86,12 +86,14 @@ nav h1 a {
 	background-color: #eee;
 	font-size: 17px;
 	width: calc(50% - 80px);
+	padding: 10px 40px 16px;
+	margin-top: 0;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
 	display: inline;
-	padding: 10px 40px 16px;
+	padding: 10px 0 16px;
 	margin: 0;
 }
 
@@ -274,6 +276,8 @@ nav h1 a {
 	border-top: 1px solid #fff;
 	padding: 140px 40px 30px;
 	width: 50%;
+	display: flex;
+	flex-direction: column;
 }
 #reviews-container {
 	padding: 30px 40px 80px;
@@ -298,7 +302,7 @@ nav h1 a {
 	overflow: hidden;
 	padding: 0 20px 20px;
 	position: relative;
-	width: 85%;
+	width: calc(100% - 120px);
 }
 #reviews-list li p {
 	margin: 0 0 10px;
