--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 	margin: 0;
 	position:relative;
 	width: 100%;
-	min-width: 360px;
+	min-width: 320px;
 }
 
 ul, li {
@@ -85,7 +85,7 @@ nav h1 a {
 	list-style: none;
 	background-color: #eee;
 	font-size: 17px;
-	width: calc(50% - 80px);
+	width: 100%;
 	padding: 10px 40px 16px;
 	margin-top: 0;
 }
@@ -141,7 +141,7 @@ nav h1 a {
 }
 .filter-options h2 {
 	color: white;
-	font-size: 1rem;
+	font-size: 12px;
 	font-weight: normal;
 	line-height: 1;
 	margin: 0 20px;
@@ -150,12 +150,12 @@ nav h1 a {
 	background-color: white;
 	border: 1px solid #fff;
 	font-family: Arial,sans-serif;
-	font-size: 11pt;
+	font-size: 11px;
 	letter-spacing: 0;
 	height: 35px;
 	margin: 10px;
 	padding: 0 10px;
-	width: 200px;
+	width: 140px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -226,11 +226,7 @@ nav h1 a {
 
 .inside #map-container {
 	background: blue none repeat scroll 0 0;
-	height: 87%;
-	position: fixed;
-	right: 0;
-	top: 80px;
-	width: 50%;
+	z-index: 900;
 }
 .inside #map {
 	background-color: #ccc;
@@ -240,12 +236,12 @@ nav h1 a {
 .inside #footer {
 	bottom: 0;
 	position: absolute;
-	width: 50%;
+	width: 100%;
 }
 #restaurant-name {
 	color: #f18200;
 	font-family: Arial,sans-serif;
-	font-size: 20pt;
+	font-size: 23px;
 	font-weight: 200;
 	letter-spacing: 0;
 	margin: 15px 0 30px;
@@ -274,17 +270,14 @@ nav h1 a {
 #restaurant-container, #reviews-container {
 	border-bottom: 1px solid #d9d9d9;
 	border-top: 1px solid #fff;
-	padding: 140px 40px 30px;
-	width: 50%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 }
-#reviews-container {
-	padding: 30px 40px 80px;
-}
+
 #reviews-container h2 {
 	color: #f58500;
-	font-size: 24pt;
+	font-size: 24px;
 	font-weight: 300;
 	letter-spacing: -1px;
 	padding-bottom: 1pt;
@@ -302,7 +295,7 @@ nav h1 a {
 	overflow: hidden;
 	padding: 0 20px 20px;
 	position: relative;
-	width: calc(100% - 120px);
+	width: calc(100% - 80px);
 }
 #reviews-list li p {
 	margin: 0 0 10px;
