--- a/css/styles.css
+++ b/css/styles.css
@@ -283,23 +283,59 @@ nav h1 a {
 	padding-bottom: 1pt;
 }
 #reviews-list {
-	margin: 0;
+	margin: 0 0 30px 0;
 	padding: 0;
 }
 #reviews-list li {
 	background-color: #fff;
 	border: 2px solid #f3f3f3;
+	border-radius: 20px 0px 20px 0px;
 	list-style-type: none;
 	display: block;
 	margin: 0 0 30px;
 	overflow: hidden;
-	padding: 0 20px 20px;
+	padding: 0;
 	position: relative;
-	width: calc(100% - 80px);
+	width: calc(100% - 60px);
 }
+
 #reviews-list li p {
-	margin: 0 0 10px;
+	margin: 0;
 }
+
+.reviewer-name, .reviewer-date {
+	display: inline-flex;
+	width: calc(50% - 10px);
+	background-color: #252831;
+	padding: 10px;
+}
+
+.reviewer-name {
+	justify-content: flex-start;
+	color: #fff;
+	font-weight: bold;
+	padding: 10px 0 10px 10px;
+}
+.reviewer-date {
+	justify-content: flex-end;
+	text-align: right;
+	color: #aaa;
+	letter-spacing: -1px;
+	padding: 10px 10px 10px 0;
+}
+
+.reviewer-rating {
+	color: #f58500;
+	text-transform: uppercase;
+	font-weight: bold;
+	padding: 10px 10px 0 10px;
+}
+
+.reviewer-comments {
+	padding: 10px;
+	text-align: justify;
+}
+
 #restaurant-hours td {
 	color: #666;
 }
