--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ nav h1 a {
 	padding-bottom: 1pt;
 }
 #reviews-list {
-	margin: 0 0 30px 0;
+	margin: 0 0 50px 0;
 	padding: 0;
 }
 #reviews-list li {
@@ -292,11 +292,10 @@ nav h1 a {
 	border-radius: 20px 0px 20px 0px;
 	list-style-type: none;
 	display: block;
-	margin: 0 0 30px;
+	margin: 10px 0;
 	overflow: hidden;
 	padding: 0;
 	position: relative;
-	width: calc(100% - 60px);
 }
 
 #reviews-list li p {
