--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@charset "utf-8";
 /* CSS Document */
 
 /* ---- GENERAL ------ */
@@ -41,6 +40,10 @@ a img{
 h1, h2, h3, h4, h5, h6 {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0 0 20px;
+}
+
+label {
+	display: none;
 }
 
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
